# mittu_dashboard

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt
data/: joined_projects_data.csv
