[tool.poetry]
name = "dashboard-mittu"
version = "0.1.0"
description = "Streamlit dashboard for project management data visualization"
authors = ["Dashboard Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.28.0"
pandas = "^2.2.0"
plotly = "^5.15.0"
numpy = "^1.26.0"

[tool.poetry.scripts]
dashboard = "streamlit run dashboard.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
